- ADD: Subversion got a new command: "Blame".
       TSVN has it too :) What it does?
       It shows you for each line in a file
       the revision it was last changed and
       the author (so you can blame a bug
       on that author :). (Stefan)
- ADD: The show log command now only shows
       the last 100 revision, configurable
       in the settings dialog. A new "Get All"
       button then fetches the rest of the log
       messages if needed. (Stefan)
- CHG: Rewrite of the status cache. The time
       for sorting a by a column should now
       take much less time and scale much
       better than before. (Stefan)
- CHG: Don't error out when doing a merge 
       if the wc has been changed. (Stefan)
- BUG: Empty lines were not shown in log
       messages. (Stefan)
- BUG: Temp files weren't deleted before an
       import even if they were marked for
       deletion. (Stefan)
- BUG: The log message when creating a new
       folder was always the same. (Stefan)
- BUG: Changes made on folders in the repo-
       browser weren't shown (refresh did
       not work). (Stefan)

Version 0.20.2
- BUG: crash bug not fixed in 0.20.1 (one Ctrl-Z
       to remove debugging code too much :)
       (Stefan)
       
Version 0.20.1
- BUG: A crash occured if the ssh settings were
       not empty. (Stefan)
- BUG: Main page in the settings dialog lost
       the language settings if the combo-box
       wasn't touched. (Stefan)

Version 0.20
- BUG: The property page was always shown in english,
       no matter what language was set. (Stefan)
- BUG: The repository browser didn't work for file:///
       URLs which had escaped chars in it. (Stefan)
- BUG: If the "X"-Button of the progress window was
       pressed twice the window just hang. (Stefan)
- BUG: The external merge program was started
       with the filenames only instead of the
       full filepaths. (Stefan)
- BUG: The status cache wasn't thread-safe and
       also not process-safe. Thanks to Luebbe