@@ -1,3 +1,9 @@
+- ADD: If multiple targets are selected for
+       update the all targets which belong to
+       the same repository (have the same uuid)
+       are updated to the same revision, no matter
+       if another commit happened in between
+       those updates. (Stefan)
 - ADD: Subversion got a new command: "Blame".
        TSVN has it too :) What it does?
        It shows you for each line in a file
